--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -452,7 +452,7 @@
   <div class="container roun my-5 p-3   flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-dark float-start">Our Major Product</h4>
-      <swiper-container class="mySwiper container bg-white" pagination="true" pagination-clickable="true" slides-per-view="3" autoplay-delay="1500"
+      <swiper-container class="mySwiper container bg-white"  slides-per-view="3" autoplay-delay="1500"
       space-between="30" free-mode="true">
       <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-4 " alt="automan"></swiper-slide>
       <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4" alt="buoylight"></swiper-slide>
