--- a/callmatics.html
+++ b/callmatics.html
@@ -407,42 +407,47 @@
   <div class="container-fluid  mt-4 d-flex bg flex-lg-row flex-column frm justify-content-between  mx-0 ">
 
     <div class="col-lg-9 mx-auto d-flex flex-column align-items-start justify-content-center   px-4">
-      <h2 class="text-center mb-3 mt-5 text-white fw-bolder mx-auto display-6">Schedule Meeting</h2>
+      <h2 class="text-center mb-3 mt-5 text-white fw-bolder mx-auto display-6">Schedule Your Meeting</h2>
       <p class="locte text-white text-center mx-auto fw-lighter ">Fill out the form to schedule a meeting and get the outline and other materials.</p>
 
-      <form class="mt-3 col-12 my-5 form_ser">
-        <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg  ">
-          <div class="col-md-4 col-12">
-            <input type="text" class="form-control  " id="firstName" placeholder="First Name" required="">
+     <form class="mt-3 col-12 my-5 form_ser">
+          <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg">
+            <div class="col-md-4 col-12">
+              <label for="firstName" class="form-label">Name:</label>
+              <input type="text" class="form-control" id="firstName" placeholder="Name" required>
+            </div>
+            <div class="col-md-4">
+              <label for="email" class="form-label">Email:</label>
+              <input type="email" class="form-control" id="email" placeholder="Email" required>
+            </div>
+            <div class="col-md-4">
+              <label for="phone" class="form-label">Phone Number:</label>
+              <input id="phone" type="tel" class="form-control phonenum" placeholder="Phone Number">
+            </div>
+            <div class="col-md-4">
+              <label for="country" class="form-label">Country:</label>
+              <input type="text" class="form-control" id="country" placeholder="Country" required>
+            </div>
+            <div class="col-md-4">
+              <label for="date" class="form-label">Date:</label>
+              <input type="date" class="form-control text-dark" id="date" required>
+            </div>
+            <div class="col-md-4">
+              <label for="start-time" class="form-label">Start Time:</label>
+              <input id="start-time" type="time" class="form-control text-dark" name="start-time" required>
+            </div>
+            <div class="col-md-4">
+              <label for="end-time" class="form-label">End Time:</label>
+              <input id="end-time" class="form-control text-dark" type="time" name="end-time" required>
+            </div>
+            <div class="col-12 text-center mb-2">
+              <button type="submit" class="mt-3 mx-auto btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+                SUBMIT
+                <i class="fa-solid fa-paper-plane icon-hover"></i>
+              </button>
+            </div>
           </div>
-          <div class="col-md-4">
-            <input type="email" class="form-control " id="lastName" placeholder="Email" required="">
-          </div>
-          <div class="col-md-4">
-            <input id="phone" type="tel" class="form-control phonenum col-6">
-
-          </div>
-
-          <div class="col-md-4">
-            <input type="text" class="form-control " id="firstName" placeholder="Address" required="">
-          </div>
-          <div class="col-md-4">
-            <input type="email" class="form-control " id="lastName" placeholder="Country" required="">
-          </div>
-          <div class="col-md-4">
-            <input type="date" class="form-control text-dark" id="lastName" required>
-          </div>
-
-          <div class="col-12 text-center mb-2">
-            <button type="submit"
-              class="mt-3 mx-auto  btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-             SUBMIT
-              <i class="fa-solid fa-paper-plane icon-hover"></i>
-
-            </button>
-          </div>
-        </div>
-      </form>
+        </form>
     </div>
 
 
