--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- Swiper CSS -->
 <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+  href="https://cdn.jspak vs nzdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
 </head>
 
@@ -669,7 +669,7 @@
   </div>
   <div class="container-fluid who m-0 d-flex flex-lg-row flex-column justify-content-between   pt-5 contact-page">
     <div class="col-lg-6">
-      <img src="Assets/images/Pictures/vert-marq-ext1-3.jpg" class="img-fluid col-12 contact_image" alt="">
+      <img src="Assets/images/Pictures/co.jpg" class="img-fluid col-12 contact_image" alt="">
     </div>
 
     <div class="col-lg-6 bg1 py-5 col-12 d-flex flex-column align-items-start  formm px-4">
