--- a/contact.html
+++ b/contact.html
@@ -396,43 +396,29 @@
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-white float-start">Our Major Product</h4>
-  <marquee width="100%" direction="left" class="rounded-3 p-3 bg-white container mx-auto"  scrollamount="10" >
-    <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
-    <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-      <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
-    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Service-Image/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safeacres.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safebuildings.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safemalls.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/safeoffice.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
-  
-    <!-- 00 -->
+   <swiper-container class="mySwiper container bg-white"  slides-per-view="3" autoplay-delay="1500"
+      space-between="30" free-mode="true">
+      <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-4 " alt="automan"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4" alt="buoylight"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4" alt="buoyspot"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4" alt="callmatics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4" alt="carmatics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4" alt="facematics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4" alt="inteliOCR"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4" alt="iport"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
 
-  </marquee>
+      <swiper-slide><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
+
+      <swiper-slide><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4" alt="medbot"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4" alt="meddroid"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4" alt="mediatalks"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4" alt="facematics"></swiper-slide>
+      <swiper-slide><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4" alt="inteliOCR"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4" alt="iport"></swiper-slide>
+      <swiper-slide> <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
+    </swiper-container>
   <div class="col-12">
   <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
 </div>
