--- a/index.html
+++ b/index.html
@@ -28,16 +28,10 @@
   <!-- Utils (Optional) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
   <!-- SWIPER CDN -->
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- SWIPER CDN -->
-<!-- Swiper CSS -->
-<link
-  rel="stylesheet"
-  href="https://cdn.jspak vs nzdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jspak vs nzdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -145,8 +139,9 @@
           </span><span class="col-org">.</span>
         </h2>
 
-        <p class="text-lg-center py-lg-1 d-lg-flex justify-content-center d-none text-white fw-normal">We Develop Secure & Intelligent Solutions </p>
-      </div> 
+        <p class="text-lg-center py-lg-1 d-lg-flex justify-content-center d-none text-white fw-normal">We Develop Secure
+          & Intelligent Solutions </p>
+      </div>
       <div
         class="col-12 text-white d-flex position-absolute bottom-0 w-100 px-3 flex-lg-row flex-column align-items-center pb-5">
 
@@ -729,33 +724,51 @@
 
     <div class="d-flex flex-row justify-content-center flex-column">
       <h4 class="text-white float-start">Our Products</h4>
-     
-      <swiper-container class="mySwiper container bg-white col-12"  slides-per-view="3" autoplay-delay="1500"
-      space-between="30" >
-      <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-lg-4 " alt="automan"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-lg-4" alt="buoylight"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-lg-4" alt="buoyspot"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-lg-4" alt="callmatics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-lg-4" alt="carmatics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-lg-4" alt="facematics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-lg-4" alt="inteliOCR"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-lg-4" alt="iport"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-lg-4" alt="mallmatics"></swiper-slide>
 
-      <swiper-slide><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-lg-4" alt="mallmatics"></swiper-slide>
+      <swiper-container class="mySwiper container bg-white col-12" slides-per-view="3" autoplay-delay="1500"
+        space-between="30">
+        <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-lg-4 "
+            alt="automan"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-lg-4"
+            alt="buoylight"></swiper-slide>
+        <swiper-slide> <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-lg-4"
+            alt="buoyspot"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-lg-4"
+            alt="callmatics"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-lg-4"
+            alt="carmatics"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-lg-4"
+            alt="facematics"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-lg-4"
+            alt="inteliOCR"></swiper-slide>
+        <swiper-slide> <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-lg-4"
+            alt="iport"></swiper-slide>
+        <swiper-slide> <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-lg-4"
+            alt="mallmatics"></swiper-slide>
 
-      <swiper-slide><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-lg-4" alt="mallmatics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-lg-4" alt="medbot"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-lg-4" alt="meddroid"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-lg-4" alt="mediatalks"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-lg-4" alt="facematics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-lg-4" alt="inteliOCR"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-lg-4" alt="iport"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-lg-4" alt="mallmatics"></swiper-slide>
-  
-    </swiper-container>
-  
-      
+        <swiper-slide><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-lg-4"
+            alt="mallmatics"></swiper-slide>
+
+        <swiper-slide><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-lg-4"
+            alt="mallmatics"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-lg-4"
+            alt="medbot"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-lg-4"
+            alt="meddroid"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-lg-4"
+            alt="mediatalks"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-lg-4"
+            alt="facematics"></swiper-slide>
+        <swiper-slide><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-lg-4"
+            alt="inteliOCR"></swiper-slide>
+        <swiper-slide> <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-lg-4"
+            alt="iport"></swiper-slide>
+        <swiper-slide> <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-lg-4"
+            alt="mallmatics"></swiper-slide>
+
+      </swiper-container>
+
+
 
       <div class="col-12">
         <h4 class="float-end mt-3 text-white">Ultimate AI Powered Products</h4>
