--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -365,7 +365,7 @@
             <p class="pe-5 fs-4 text-white col-lg-5">AI-Driven Web & App
                 Development Solutions
             </p>
-            <p class="text-white col-lg-6 fs-6 fw-normal text-end float-end">
+            <p class="text-white col-lg-6 fs-6 fw-light text-end float-end">
                 AI-Driven AI Driven  Web & App Development Solutions
                 At AI-Driven AI Driven  Web & App Development Solutions, we specialize in creating secure and intelligent software
                 tailored to your business needs. Our solutions are designed to streamline operations.
