--- a/GRC-Services.html
+++ b/GRC-Services.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Grc Solution | Intelligent & Cyber Secure Solutions</title>
+    <title>GRC Services | Intelligent & Cyber Secure Solutions</title>
     <!-- FONT AWEOSEOM -->
      <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
 
@@ -74,7 +74,7 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="GRC-Services.html">GRC Services</a></li>
                 <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
@@ -129,7 +129,7 @@
         </div>
 
         <button class="btnhome d-flex fw-bold"><span class="pe-3">Home</span>
-            <li>Grc Solution</li>
+            <li>GRC Services</li>
         </button>
 
     </div>
@@ -232,7 +232,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
-            <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+            <li><a class="dropdown-item" href="GRC-Services.html">GRC Services</a></li>
             <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
             <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
