--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="GRC-Services.html">GRC Services</a></li>
                 <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
@@ -232,7 +232,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="GRC-Services.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
@@ -390,8 +390,11 @@
   <!-- CONTACT-US -->
 <!-- CONTACT-US END -->
 
-
-
+<!-- MAP START -->
+ <div class="container-fluid m-0 p-0 py-5 ">
+  <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.530119805925!2d-81.51001662389079!3d28.493694175740895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ed1863281cf%3A0x80aa2af03e1c4035!2sConroy%20Rd%2C%20Windermere%2C%20FL%2034786%2C%20USA!5e0!3m2!1sen!2s!4v1739033535734!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+ </div>
+<!-- MAP END -->
   <!-- OUR PARTNER START-->
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
