--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="GRC-Services.html">GRC Services</a></li>
                 <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven Web & App Development</a>
                 </li>
 
@@ -279,7 +279,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="GRC-Services.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven Web & App Development</a></li>
 
             </ul>
@@ -470,7 +470,7 @@
           <div class="mx-auto col-12 d-flex flex-row  align-items-center">
             <button class="mx-1 col-5 set-btn">More-Info
               <span class="set-btn-hover d-flex flex-row align-items-center justify-content-center">
-                <a href="GrcSolution.html" class="col-12">
+                <a href="GRC-Services.html" class="col-12">
 
                   <i class="fa-solid fa-calendar tex">
 
