--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -69,7 +69,7 @@
             <span class="navhover"></span>
             <ul class="dropdown-menu mx-auto">
               <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution</a></li>
-              <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item nav-link" href="GRC-Services.html">GRC Services</a></li>
               <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
               <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
               <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
@@ -214,7 +214,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="GRC-Services.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
