--- a/GRC-Services.html
+++ b/GRC-Services.html
@@ -369,10 +369,7 @@
             </p>
             <p class="text-white col-lg-7 fs-6 fw-lighter text-end">
 
-                At AI-GRC-Software Development Solution, we specialize in creating secure and intelligent software
-                tailored to your business needs. Our solutions are designed to streamline operations, enhance
-                decision-making, and ensure compliance with advanced AI-driven technologies. Let us help you build a
-                smarter and safer future.
+              We are offering GRC (Governance, Risk, and Compliance) services that makes you secured and complainced. Our top notch services, like ISO 27001 (Information Security Management System), ISO 22301 BCM (Business Continuity Management), ISO 31000 RMS (Risk Management) etc. implementations are streamlined your businesses with technological and company policies thats make you effective, efficient and gearing up to the excellence.
             </p>
         </div>
         <div class="container d-flex flex-lg-column flex-column py-5 gth">
