--- a/getqoutes.html
+++ b/getqoutes.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- FONT AWEOSEOM -->
+    <!-- ======================== FONT AWEOSEOM ======================== -->
      <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
 
-    <!-- FONT AWEOSEOM -->
+    <!-- ======================== FONT AWEOSEOM ======================== -->
   
-    <!-- EXTERNEL CSS FILE -->
+    <!-- ======================== EXTERNEL CSS FILE ======================== -->
     <link rel="stylesheet" href="CSS/style.css">
-    <!-- EXTERNEL CSS FILE -->
+    <!-- ======================== EXTERNEL CSS FILE ======================== -->
   
-    <!-- Bootstrap CSS -->
+    <!-- ======================== Bootstrap CSS ======================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- FONT AWESOME CDN -->
+    <!-- ======================== FONT AWESOME CDN ======================== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,30 +30,30 @@
 
   </a>
 
-  <!-- TOP-ANIMATION -->
+  <!-- ======================== TOP-ANIMATION ======================== -->
 
-  <!-- TOP-ANIMATION -->
+  <!-- ======================== TOP-ANIMATION ======================== -->
 
-  <!-- TOP -->
-  <!-- NAVBAR -->
+  <!-- ======================== TOP ======================== -->
+  <!-- ======================== NAVBAR ======================== -->
 
-  <!-- NAVBAR -->
-     <!-- NAVBAR START -->
+  <!-- ======================== NAVBAR ======================== -->
+     <!-- ======================== NAVBAR START ======================== -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
-        <!-- Logo -->
+        <!-- ======================== Logo ======================== -->
         <a class="col-lg-3 col-9" href="#">
           <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-3 col-2 " />
 
         </a>
 
-        <!-- Toggler Button -->
+        <!-- ======================== Toggler Button ======================== -->
 
         <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars"></i>
         </button>
-        <!-- Collapsible Navbar Content -->
+        <!-- ======================== Collapsible Navbar Content ======================== -->
         <div class="collapse ps-lg-5 sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
           <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
             <li class="nav-item">
@@ -95,7 +95,7 @@
             </li>
           </ul>
 
-          <!-- Offcanvas Button -->
+          <!-- ======================== Offcanvas Button ======================== -->
           <form class="d-lg-flex d-none ms-auto " role="search">
             <div class="input-group">
               <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
@@ -106,16 +106,16 @@
           </form>
         </div>
       </div>
-      <!-- Optional Element -->
+      <!-- ======================== Optional Element ======================== -->
       <div class="" id="navunder"></div>
     </nav>
-    <!-- NAVBAR END-->
+    <!-- ======================== NAVBAR END======================== -->
 
-  <!-- NAVBAR -->
-  <!-- INFO CANVAS -->
+  <!-- ======================== NAVBAR ======================== -->
+  <!-- ======================== INFO CANVAS ======================== -->
   <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-      <!-- Brand Logo and Close Button -->
+      <!-- ======================== Brand Logo and Close Button ======================== -->
       <div class="d-flex justify-content-between w-100 align-items-center">
         <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Runok Logo" class="logo" style="width: 50px;">
 
@@ -125,7 +125,7 @@
       </div>
     </div>
     <div class="offcanvas-body">
-      <!-- About Section -->
+      <!-- ======================== About Section ======================== -->
       <div class="about-section text-start">
         <h2 class="fw-bolder py-3 text-white">
 </h2>
@@ -135,7 +135,7 @@
         </h5>
         </div>
   
-      <!-- Contact Info -->
+      <!-- ======================== Contact Info ======================== -->
       <div class="contact-info mt-1">
 
         <p class="pt-3">
@@ -161,7 +161,7 @@
   <div class="col-12 mx-auto">
 <img src="Assets/images/Pictures/exp-img-1.jpg" class="img-fluid col-12" alt="">
   </div>
-      <!-- Social Media Icons -->
+      <!-- ======================== Social Media Icons ======================== -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
 <div class="col-8 mx-auto  d-flex flex-row justify-content-between">
   <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -172,15 +172,15 @@
       </div>
     </div>
   </div>
-  <!-- INFO CANVAS -->
-  <!-- OFFCANVAS -->
+  <!-- ======================== INFO CANVAS ======================== -->
+  <!-- ======================== OFFCANVAS ======================== -->
    <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
     aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
           <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-2 col-2" />
-          <!-- Replace with actual logo path -->
+          <!-- ======================== Replace with actual logo path ======================== -->
         </a>
       </h5>
       <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;"
@@ -199,9 +199,9 @@
             <a class="nav-link" aria-current="page" href="about.html">About</a>
             <span class="navhover"></span>
           </li>
-          <!--  -->
+          <!-- ========================  ======================== -->
 
-          <!--  -->
+          <!-- ========================  ======================== -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
               aria-expanded="false">
