--- a/practice.html
+++ b/practice.html
@@ -73,10 +73,10 @@
 </head>
 <body>
   <div class="slider-container">
-    <!-- Left Arrow -->
+    <!-- ======================== Left Arrow ======================== -->
     <button class="arrow left-arrow" onclick="slideLeft()">&#10094;</button>
 
-    <!-- Card Container -->
+    <!-- ======================== Card Container ======================== -->
     <div class="card-wrapper">
       <div class="card">
         <h3>Card 1</h3>
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <!-- Right Arrow -->
+    <!-- ======================== Right Arrow ======================== -->
     <button class="arrow right-arrow" onclick="slideRight()">&#10095;</button>
   </div>
 
