--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
+  <!-- ======================== Required meta tags ======================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- FONT AWEOSEOM -->
+  <!-- ======================== FONT AWEOSEOM ======================== -->
    <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
 
-  <!-- FONT AWEOSEOM -->
+  <!-- ======================== FONT AWEOSEOM ======================== -->
 
-  <!-- EXTERNEL CSS FILE -->
+  <!-- ======================== EXTERNEL CSS FILE ======================== -->
   <link rel="stylesheet" href="CSS/style.css">
-  <!-- EXTERNEL CSS FILE -->
+  <!-- ======================== EXTERNEL CSS FILE ======================== -->
 
-  <!-- Bootstrap CSS -->
+  <!-- ======================== Bootstrap CSS ======================== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- FONT AWESOME CDN -->
+  <!-- ======================== FONT AWESOME CDN ======================== -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -34,28 +34,28 @@
 
   </a>
 
-  <!-- TOP-ANIMATION -->
+  <!-- ======================== TOP-ANIMATION ======================== -->
 
-  <!-- TOP-ANIMATION -->
+  <!-- ======================== TOP-ANIMATION ======================== -->
 
-  <!-- TOP -->
-  <!-- NAVBAR -->
+  <!-- ======================== TOP ======================== -->
+  <!-- ======================== NAVBAR ======================== -->
 
-  <!-- NAVBAR -->
+  <!-- ======================== NAVBAR ======================== -->
   <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
     <div class="container-fluid d-flex flex-row justify-content-between">
-      <!-- Logo -->
+      <!-- ======================== Logo ======================== -->
       <a class="navbar-brand" href="#">
              <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-2 col-2" />
 
       </a>
 
-      <!-- Toggler Button -->
+      <!-- ======================== Toggler Button ======================== -->
  <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
   <i class="fa-solid fa-bars"></i>
 </button>
 
-      <!-- Collapsible Navbar Content -->
+      <!-- ======================== Collapsible Navbar Content ======================== -->
       <div class="collapse sdsd navbar-collapse d-flex flex-row justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mt-2 mb-lg-0 d-lg-flex d-none">
           <li class="nav-item">
@@ -82,14 +82,14 @@
              About Us
             </a>
             <span class="navhover"></span>
-            <!-- <ul class="dropdown-menu mx-auto">
+            <!-- ======================== <ul class="dropdown-menu mx-auto">
               <li><a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout
                   Memberships</a></li>
               <li><a class="dropdown-item nav-link" href="memberships/AssociateMemberships.html">Cybron Associate
                   Memberships</a></li>
               <li><a class="dropdown-item nav-link" href="memberships/ProfessionalMemberships.html">Cybron Professional
                   Memberships</a></li>
-            </ul> -->
+            </ul> ======================== -->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -101,7 +101,7 @@
           </li>
         </ul>
 
-        <!-- Offcanvas Button -->
+        <!-- ======================== Offcanvas Button ======================== -->
         <form class="d-flex " role="search">
           <div class="input-group">
           <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight1">
@@ -111,15 +111,15 @@
         </form>
       </div>
     </div>
-    <!-- Optional Element -->
+    <!-- ======================== Optional Element ======================== -->
     <div class="" id="navunder"></div>
   </nav>
 
-  <!-- NAVBAR -->
-  <!-- INFO CANVAS -->
+  <!-- ======================== NAVBAR ======================== -->
+  <!-- ======================== INFO CANVAS ======================== -->
   <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-      <!-- Brand Logo and Close Button -->
+      <!-- ======================== Brand Logo and Close Button ======================== -->
       <div class="d-flex justify-content-between w-100 align-items-center">
         <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Runok Logo" class="logo" style="width: 50px;">
 
@@ -129,7 +129,7 @@
       </div>
     </div>
     <div class="offcanvas-body">
-      <!-- About Section -->
+      <!-- ======================== About Section ======================== -->
       <div class="about-section text-start">
         <h2 class="fw-bolder py-3 text-white">
 </h2>
@@ -139,7 +139,7 @@
         </h5>
         </div>
   
-      <!-- Contact Info -->
+      <!-- ======================== Contact Info ======================== -->
       <div class="contact-info mt-1">
 
         <p class="pt-3">
@@ -165,7 +165,7 @@
   <div class="col-12 mx-auto">
 <img src="Assets/images/Pictures/exp-img-1.jpg" class="img-fluid col-12" alt="">
   </div>
-      <!-- Social Media Icons -->
+      <!-- ======================== Social Media Icons ======================== -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
 <div class="col-8 mx-auto  d-flex flex-row justify-content-between">
   <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -177,81 +177,10 @@
     </div>
   </div>
   
-  <!-- INFO CANVAS -->
-  <!-- OFFCANVAS -->
-   <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
-    aria-labelledby="offcanvasRightLabel">
-    <div class="offcanvas-header container">
-      <h5 class="offcanvas-title" id="offcanvasRightLabel">
-        <a class="navbar-brand" href="#">
-          <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-2 col-2" />
-          <!-- Replace with actual logo path -->
-        </a>
-      </h5>
-      <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;"
-        data-bs-dismiss="offcanvas" aria-label="Close">
-        <i class="fa-solid fa-xmark text-white1 fs-1 "></i>
-      </button>
-    </div>
-    <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
-      <div class="col-lg-6 col-12">
-        <ul class="navbar-nav me-auto mt-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <span class="navhover"></span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="about.html">About</a>
-            <span class="navhover"></span>
-          </li>
-          <!--  -->
+  <!-- ======================== INFO CANVAS ======================== -->
 
-          <!--  -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Service
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GRC-Services.html">GRC Services</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
-            
-            </ul>
-          </li>
-
-
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <span class="navhover"></span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
-            <span class="navhover"></span>
-          </li>
-        </ul>
-        <div>
-          <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white1 ">Lets Talk
-            <span class="lets-talk-btn-hover"></span>
-          </button>
-        </div>
-        <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
-          <a href="#" class="text-white1 mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-white1 mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white1 mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white1 mx-2"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
-      <div>
-      </div>
-      <div class="col-lg-6 col-12">
-        <h2 class="display-2 text-white1 text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
-      </div>
-    </div>
-  </div>
-  <!-- OFFCANVAS -->
-  <!-- CONTACT-US -->
-  <div class="container-fluid bg d-flex flex-column align-items-center justify-content-center  h20 pb-0"
+  <!-- ======================== CONTACT-US ======================== -->
+  <div class="container-fluid bg d-flex flex-column align-items-center justify-content-center   pb-0"
     id="home">
     <h2>B</h2>
  <h5 class="text-white  fw-bold">Home / Schedule Meeting</h5>
@@ -260,7 +189,7 @@
 
 
 
-  <!-- OUR PARTNER START-->
+  <!-- ======================== OUR PRODUCT START======================== -->
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-white float-start">Our Major Product</h4>
@@ -294,10 +223,10 @@
     
   </div>
   
-  <!-- OUR PARTNER END-->
-  <!-- FOOTER -->
-
-   <footer class=" footer pt-5 py-3">
+  <!-- ======================== OUR PRODUCT END======================== -->
+  <!-- ======================== FOOTER START ======================== -->
+  <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
+  <footer class=" footer pt-5 py-3">
 
     <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
@@ -306,7 +235,7 @@
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
-          <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white1">cybron@cybroninternational.com</a></p> -->
+          <!-- ======================== <p><a href="mailto:cybron@cybroninternational.com" class="text-white1">cybron@cybroninternational.com</a></p> ======================== -->
         </div>
 
         <div class="col-lg-3  col-12 col-md-6 mb-4 ps-lg-5">
@@ -359,21 +288,23 @@
 
 
     </div>
-    <p class="mb-0 mx-auto   pb-3 text-white1 container bg rounded-3 border-0   p-3  text-center bottom-footer ">© 2024 AiSystemSoft
+    <p class="mb-0 mx-auto   pb-3 text-white1 container bg rounded-3 border-0   p-3  text-center bottom-footer ">© 2024
+      AiSystemSoft
       All Rights Reserved</p>
   </footer>
-  <!-- FOOTER -->
+    <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
+  <!-- ======================== FOOTER END ======================== -->
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <!-- ======================== Option 1: Bootstrap Bundle with Popper ======================== -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <!-- SWIPER CDN -->
+  <!-- ======================== SWIPER CDN ======================== -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
-  <!-- EXTERNEL JS FILE -->
+  <!-- ======================== EXTERNEL JS FILE ======================== -->
   <script src="JS/app.js"></script>
-  <!-- EXTERNEL JS FILE -->
+  <!-- ======================== EXTERNEL JS FILE ======================== -->
 
 </body>
 
