--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -2,31 +2,31 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
+  <!-- ======================== Required meta tags ======================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- FONT AWEOSEOM -->
+  <!-- ======================== FONT AWEOSEOM ======================== -->
    <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
 
-  <!-- FONT AWEOSEOM -->
+  <!-- ======================== FONT AWEOSEOM ======================== -->
 
-  <!-- EXTERNEL CSS FILE -->
+  <!-- ======================== EXTERNEL CSS FILE ======================== -->
   <link rel="stylesheet" href="CSS/style.css">
-  <!-- EXTERNEL CSS FILE -->
+  <!-- ======================== EXTERNEL CSS FILE ======================== -->
 
-  <!-- Bootstrap CSS -->
+  <!-- ======================== Bootstrap CSS ======================== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- FONT AWESOME CDN -->
+  <!-- ======================== FONT AWESOME CDN ======================== -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>planetSCAN| Intelligent & Cyber Secure Solutions</title>
-  <!-- intl-tel-input CSS -->
+  <!-- ======================== intl-tel-input CSS ======================== -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
-  <!-- Utils (Optional) -->
+  <!-- ======================== Utils (Optional) ======================== -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
 
 
@@ -34,32 +34,35 @@
 
 <body>
 
+ <!-- ======================== SCROLL TO TOP BTN START  ========================-->
   <a href="#" class="topbtnfix text-decoration-none">
     <span id="topbtn"><i class="fa-solid fa-arrow-up p-2"></i></span>
 
 
   </a>
+<!-- ======================== SCROLL TO TOP BTN END  ========================-->
 
-  <!-- MAIN 1 START -->
+
+  <!-- ======================== MAIN 1 START ======================== -->
   <div class="container-fluid  mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-22.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
-    <!-- NAVBAR START -->
-    <!-- NAVBAR START -->
+    <img src="Assets/images/Banner-Image/banner-img-22.png" class="m-0 p-0 w-100 position-absolute  " alt="">
+    <!-- ======================== NAVBAR START ======================== -->
+    <!-- ======================== NAVBAR START ======================== -->
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
-        <!-- Logo -->
+        <!-- ======================== Logo ======================== -->
         <a class="col-lg-3 col-9" href="#">
           <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-3 col-2 " />
 
         </a>
 
-        <!-- Toggler Button -->
+        <!-- ======================== Toggler Button ======================== -->
 
         <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars"></i>
         </button>
-        <!-- Collapsible Navbar Content -->
+        <!-- ======================== Collapsible Navbar Content ======================== -->
         <div class="collapse ps-lg-5 sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
           <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
             <li class="nav-item">
@@ -101,7 +104,7 @@
             </li>
           </ul>
 
-          <!-- Offcanvas Button -->
+          <!-- ======================== Offcanvas Button ======================== -->
           <form class="d-lg-flex d-none ms-auto " role="search">
             <div class="input-group">
               <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
@@ -112,28 +115,28 @@
           </form>
         </div>
       </div>
-      <!-- Optional Element -->
+      <!-- ======================== Optional Element ======================== -->
       <div class="" id="navunder"></div>
     </nav>
-    <!-- NAVBAR END-->
-    <!-- NAVBAR END-->
+    <!-- ======================== NAVBAR END======================== -->
+    <!-- ======================== NAVBAR END======================== -->
 
-    <!-- MAIN SUB DIV START -->
-    <!-- BANNER START -->
-    <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0">
+    <!-- ======================== MAIN SUB DIV START ======================== -->
+    <!-- ======================== BANNER START ======================== -->
+    <div class="container-fluid home d-flex flex-column align-items-center justify-content-center   pb-0">
       <h2 class="text-white mb-3 display-2 fw-bold">plannetScam<sup class="col-org">TM</sup> </h2>
       <h4 class="text-white  ">Home / plannetScam </h4>
     </div>
-    <!-- BANNER END -->
+    <!-- ======================== BANNER END ======================== -->
 
-    <!-- MAIN SUB DIV END -->
+    <!-- ======================== MAIN SUB DIV END ======================== -->
 
   </div>
-  <!-- MAIN 1 END -->
-  <!-- INFO CANVAS -->
+  <!-- ======================== MAIN 1 END ======================== -->
+  <!-- ======================== INFO CANVAS ======================== -->
   <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-      <!-- Brand Logo and Close Button -->
+      <!-- ======================== Brand Logo and Close Button ======================== -->
       <div class="d-flex justify-content-between w-100 align-items-center">
         <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Runok Logo" class="logo" style="width: 50px;">
 
@@ -144,7 +147,7 @@
       </div>
     </div>
     <div class="offcanvas-body">
-      <!-- About Section -->
+      <!-- ======================== About Section ======================== -->
       <div class="about-section text-start">
         <h2 class="fw-bolder py-3 text-white">
         </h2>
@@ -154,7 +157,7 @@
         </h5>
       </div>
 
-      <!-- Contact Info -->
+      <!-- ======================== Contact Info ======================== -->
       <div class="contact-info mt-1">
 
         <p class="pt-3">
@@ -180,7 +183,7 @@
       <div class="col-12 mx-auto">
         <img src="Assets/images/Pictures/exp-img-1.jpg" class="img-fluid col-12" alt="">
       </div>
-      <!-- Social Media Icons -->
+      <!-- ======================== Social Media Icons ======================== -->
       <div class="social-icons  d-flex justify-content-around gap-3 position-absolute bottom-0 col-12 w100 ">
         <div class="col-8 mx-auto  d-flex flex-row justify-content-between">
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -192,15 +195,15 @@
     </div>
   </div>
 
-  <!-- INFO CANVAS -->
-  <!-- OFFCANVAS -->
+  <!-- ======================== INFO CANVAS ======================== -->
+  <!-- ======================== OFFCANVAS ======================== -->
   <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
     aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
         <a class="navbar-brand" href="#">
           <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-2 col-2" />
-          <!-- Replace with actual logo path -->
+          <!-- ======================== Replace with actual logo path ======================== -->
         </a>
       </h5>
       <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;"
@@ -219,9 +222,9 @@
             <a class="nav-link" aria-current="page" href="about.html">About</a>
             <span class="navhover"></span>
           </li>
-          <!--  -->
+          <!-- ========================  ======================== -->
 
-          <!--  -->
+          <!-- ========================  ======================== -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
               aria-expanded="false">
@@ -264,13 +267,13 @@
       </div>
     </div>
   </div>
-  <!-- OFFCANVAS -->
+  <!-- ======================== OFFCANVAS ======================== -->
 
 
   <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column">
     <div class="col-lg-3 who p-2 sticky-element border-radious">
       <h3 class="text-white1 px-2 py-3">AI Product Solution</h3>
-      <!--  -->
+      <!-- ========================  ======================== -->
       <ul class="list-unstyled px-2">
         <li class="fs-5 text-white1 mb-3"><a href="plannet_scan.html" class="text-white1 text-decoration-none">plannetScam
 
@@ -282,7 +285,7 @@
         <img src="Assets/images/Service-Image/service-img-06.jpg" class="border-radious img-fluid ser-img-1 " alt="">
         <div class="line px-2"></div>
       </div>
-      <!--  -->
+      <!-- ========================  ======================== -->
       <div class="col-12 d-flex flex-column px-2 pb-5">
         <img src="Assets/images/Service-Image/service-img-10.jpg" class="border-radious img-fluid  ser-img-1" alt="">
         <h5 class="text-white1 pt-3">How Can We Help</h5>
@@ -312,9 +315,9 @@
     </div>
     <div class="col-lg-9 ps-lg-3 mt-lg-0 mt-2">
       <span></span>
-      <!--  -->
+      <!-- ========================  ======================== -->
       <img src="Assets/images/Service-Image/service-img-13.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
-      <!--  -->
+      <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5">
         An AI & Most Modern GIS Technologies based solution to analyze satellite imagery in unprecedented ways to derive various demographic and social metrics for a given location. Count objects & features, classify a city into different settlement types e.g. Apartment vs Villas vs Small Homes, Slums Vs Planned Settled areas, residential Vs industrial. Analyze Agriculture Land and Crop, Analysis of Land utilization Parks Vs Sports Fields Vs Water Ways.
@@ -324,7 +327,7 @@
         
         Our solution is one of the most amazing solution which has been developed on AI technology by using the deep learning and machine learning techniques. For enquiry and demonstration, please email us at enquiry@perceptronglobal.com
       </p>
-      <!--  -->
+      <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org">Benefit</h2>
       <p class="fw-light  fs-5">
         Enhanced operational efficiency is achieved by automating data capture at gates, weighbridges, and cranes, which
@@ -332,8 +335,8 @@
         optimizing operations, ultimately saving millions annually for businesses. Real-time data processing allows for
         instant information access, enabling quick decision-making and minimizing delays across terminal operations.
       </p>
-      <!--  -->
-      <!--  -->
+      <!-- ========================  ======================== -->
+      <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org ">Advantages:</h2>
       <p class="fw-light  fs-5">
         The solution offers seamless integration with Terminal Operating Systems (TOS), ensuring efficient operations
@@ -347,8 +350,8 @@
         deployment options available. Designed for 24/7 reliability, it operates continuously under the toughest
         conditions, ensuring uninterrupted performance
       </p>
-      <!--  -->
-      <!--  -->
+      <!-- ========================  ======================== -->
+      <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org ">Business Planning & Strategy </h2>
       <p class="fw-light  fs-5">
         Our approach to planning and strategy for terminal automation centers on helping you implement a clear,
@@ -376,7 +379,7 @@
 
 
       </div>
-      <!-- ACCORDIANS -->
+      <!-- ======================== ACCORDIANS ======================== -->
       <h2 class="fs-1 pt-4 pb-4 col-org  ">Frequently asked questions </h2>
 
       <button class="accordion fs-5">Section 1</button>
@@ -399,11 +402,11 @@
           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
           commodo consequat.</p>
       </div>
-      <!-- ACCORDIANS -->
+      <!-- ======================== ACCORDIANS ======================== -->
     </div>
   </div>
 
-  <!-- FORM-->
+  <!-- ======================== FORM======================== -->
   <div class="container-fluid  mt-4 d-flex bg flex-lg-row flex-column frm justify-content-between  mx-0 ">
 
     <div class="col-lg-9 mx-auto d-flex flex-column align-items-start justify-content-center   px-4">
@@ -453,8 +456,8 @@
 
 
   </div>
-  <!-- FORM -->
-  <!-- OUR PARTNER START-->
+  <!-- ======================== FORM ======================== -->
+  <!-- ======================== OUR PRODUCT START======================== -->
   <div class="container roun my-5 p-3   flex-row justify-content-center align-items-center">
     <div class="d-flex flex-row justify-content-center flex-column">
   <h4 class="text-dark float-start">Our Major Product</h4>
@@ -488,8 +491,8 @@
     
   </div>
 
-  <!-- OUR PARTNER END-->
-  <!-- FOOTER -->
+  <!-- ======================== OUR PRODUCT END======================== -->
+  <!-- ======================== FOOTER ======================== -->
   <footer class=" footer pt-5 py-3">
 
     <div class="container-fluid footer-content px-4 py-3">
@@ -499,7 +502,7 @@
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
-          <!-- <p><a href="mailto:cybron@cybroninternational.com" class="text-white1">cybron@cybroninternational.com</a></p> -->
+          <!-- ======================== <p><a href="mailto:cybron@cybroninternational.com" class="text-white1">cybron@cybroninternational.com</a></p> ======================== -->
         </div>
 
         <div class="col-lg-3  col-12 col-md-6 mb-4 ps-lg-5">
@@ -556,18 +559,18 @@
       All Rights Reserved</p>
   </footer>
 
-  <!-- FOOTER -->
+  <!-- ======================== FOOTER ======================== -->
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <!-- ======================== Option 1: Bootstrap Bundle with Popper ======================== -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <!-- SWIPER CDN -->
+  <!-- ======================== SWIPER CDN ======================== -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
-  <!-- EXTERNEL JS FILE -->
+  <!-- ======================== EXTERNEL JS FILE ======================== -->
   <script src="JS/app.js"></script>
-  <!-- EXTERNEL JS FILE -->
+  <!-- ======================== EXTERNEL JS FILE ======================== -->
 
 </body>
 
