--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
       <!-- ======================== MAIN SUB DIV START ======================== -->
 
       <div class="d-flex flex-column justify-content-center align-items-center">
-        <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column pt-lg-5 ">
-          <div class="d-flex  text-white col-12 flex-row justify-content-lg-center pt-lg-5 ">
+        <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column ">
+          <div class="d-flex  text-white col-12 flex-row justify-content-lg-center ">
             <p class="pe-5 fs-5 fw-bold">Welcome Everyone - We are Available at your Service
             </p>
           </div>
@@ -290,17 +290,15 @@
             </span><span class="col-org">.</span>
           </h2>
 
-          <p class="text-lg-center py-lg-1 d-lg-flex justify-content-center d-none text-white fw-normal">We Develop
+          <p class="text-lg-center  d-lg-flex justify-content-center d-none text-white fw-normal">We Develop
             Secure
             & Intelligent Solutions </p>
         </div>
-        <div
-          class="col-12 text-white d-flex position-absolute bottom-0 w-100 px-3 flex-lg-row flex-column align-items-center pb-5">
+    
 
+          <div class="col-lg-12 text-white1 pt-lg-5 mt-lg-5 col-12  d-flex flex-lg-row flex-column justify-content-between mt-lg-0 ">
 
-          <div class="col-lg-12  col-12  d-flex flex-lg-row flex-column justify-content-between mt-lg-0 mt-5">
-
-            <div class=" col-lg-2 col-5 d-flex justify-content-center align-items-center flex-column">
+            <div class=" col-lg-2 col-5 d-flex   justify-content-center align-items-center flex-column">
               <button class="banner-btn1  ">
                 <span class="banner-btn  ">Explore Our Services</span>
                 <span class="banner-btn-hover ">
@@ -314,7 +312,7 @@
 
 
             </div>
-            <div class="col-lg-5 d-flex flex-column align-items-end col-12 text-end py-lg-0 py-3">
+            <div class="col-lg-5 d-flex flex-column   align-items-end col-12 text-end py-lg-0 py-3">
               <p class="color-black text-capitalize fs-6 fw-light">
                 AI-System-Soft Provide business solutions pertain to the <span class="fw-bolder">GRC (Governance, Risk,
                   and
@@ -326,7 +324,7 @@
 
             </div>
           </div>
-        </div>
+
       </div>
       <!-- ======================== MAIN SUB DIV END ======================== -->
 
