--- a/header.html
+++ b/header.html
@@ -152,9 +152,10 @@
                             </a>
                             <span class="navhover"></span>
                             <ul class="dropdown-menu mx-auto">
-                                <li class="dropdown-submenu">
-                                    <a class="dropdown-item  dropdown-toggle nav-link" href="~/home/ai_product_solutions">
-                                        Ai Product Solution  </a>
+                                <li class="dropdown-submenu position-relative">
+                                    <a class="dropdown-item  d-flex justify-content-between align-items-center dropdown-toggle nav-link" href="~/home/ai_product_solutions">
+                                        Ai Product Solution
+                                        <i class="fa-solid fa-chevron-right ms-2"></i>   </a>
                                
                                         <ul class="dropdown-menu1 list-unstyled child-dropdown">
                                             <li><a class="dropdown-item" href="buoylight.html">buoylight</a></li>
