--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -434,26 +434,31 @@
                         <i class="fa-solid fa-paper-plane"></i>
                     </a>
                 </button>
+<!--  -->
+<div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
+  <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
+  <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="nm1"
+         id="nm1">
+  <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="emailadd" id="emailadd">
+  
+  <select id="product_name" class="form-select mb-4">
+    <option value="" class="text-white" selected>Select Product Please</option>
+    <option value="buoyLIGHT">buoyLIGHT</option>
+    <option value="buoySPOT">buoySPOT</option>
+    <option value="buoySPY">buoySPY</option>
+    <option value="callMATICS">callMATICS</option>
+    <option value="planetSCAN">planetSCAN</option>
+</select>
 
-                <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
-                    <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
-                        id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
-                        id="email">
-
-
-                    <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
-                    <div class="col-12 text-center  mt-2">
-                        <button type="submit"
-                            class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                            Submit
-                            <i class="fa-solid fa-paper-plane icon-hover"></i>
-
-                        </button>
-                    </div>
-
-                </div>
+  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+  <div class="col-12 text-center  mt-2">
+      <button type="submit" class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+          Submit
+          <i class="fa-solid fa-paper-plane icon-hover"></i>
+      </button>
+  </div>
+</div>
+                <!--  -->
             </div>
         </div>
     <!-- ========================  BUOYLIGHT SERVICE END ===================== -->
