--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
 
   <!-- ======================== MAIN 1 START ======================== -->
   <section>
-    <div class="container-fluid  mb-5 home d-flex flex-column align-items-center justify-content-center">
+    <div class="container-fluid  mb-5 home_new d-flex flex-column align-items-center justify-content-center">
       <!-- =============================== BANNER IMAGE START =========================================== -->
-      <img src="Assets/images/Banner-Image/banner-img-25.png" class="m-0  p-0 w-100 position-absolute banner-img "
+      <img src="Assets/images/Banner-Image/banner-img-25.png" class="m-0  p-0 w-100 position-absolute banner-img_new "
         alt="">
       <!-- =============================== BANNER IMAGE END =========================================== -->
       <!-- ======================== MAIN SUB DIV START ======================== -->
@@ -279,12 +279,12 @@
       <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column ">
           <div class="d-flex  text-white col-12 flex-row justify-content-lg-center ">
-            <p class="pe-5 fs-5 fw-bold">Welcome Everyone - We are Available at your Service
+            <p class="m-0 p-0 fs-5 fw-light">Welcome Everyone - We are Available at your Service
             </p>
           </div>
 
           <h2
-            class="display-1 text-white fw-bolder text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
+            class="display-2 text-white fw-bolder text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
             AI-GRC-Software
             Development <span class="text-eni">
               <span class="text-ani-child">Solution Company</span>
